# libsignal-protocol-c

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  ISSUE_TEMPLATE.md  README.md  SignalProtocolC.podspec
CMakeModules/: BlackBerry.toolchain.cmake  SignalCheck.cmake  iOS.toolchain.cmake  signal-protocol-config.cmake.in
protobuf/: FingerprintProtocol.proto  LocalStorageProtocol.proto  Makefile  WhisperTextProtocol.proto
src/: CMakeLists.txt  FingerprintProtocol.pb-c.c  FingerprintProtocol.pb-c.h  LocalStorageProtocol.pb-c.c  LocalStorageProtocol.pb-c.h  WhisperTextProtocol.pb-c.c  WhisperTextProtocol.pb-c.h  axolotl.c  axolotl.h  axolotl_internal.h  axolotl_types.h  curve.c  curve.h  device_consistency.c  device_consistency.h  fingerprint.c  fingerprint.h  group_cipher.c  group_cipher.h  group_session_builder.c  group_session_builder.h  hkdf.c  hkdf.h  key_helper.c  key_helper.h  libsignal-protocol-c.pc.in  protocol.c  protocol.h  ratchet.c  ratchet.h  sender_key.c  sender_key.h  sender_key_record.c  sender_key_record.h  sender_key_state.c  sender_key_state.h  session_builder.c  session_builder.h  session_builder_internal.h  session_cipher.c  (+15 more)
src/curve25519/: CMakeLists.txt  curve25519-donna.c
src/curve25519/ed25519/: fe_isnonzero.c  ge.h  ge_frombytes.c  ge_p3_tobytes.c  open.c
src/curve25519/ed25519/additions/: crypto_additions.h  curve_sigs.c  curve_sigs.h  elligator.c  fe_isequal.c  fe_isreduced.c  fe_mont_rhs.c  fe_montx_to_edy.c  fe_sqrt.c  ge_is_small_order.c  ge_isneutral.c  ge_montx_to_p2.c  ge_montx_to_p3.c  ge_neg.c  ge_p3_to_montx.c  ge_scalarmult.c  ge_scalarmult_cofactor.c  keygen.c  keygen.h  open_modified.c  sc_clamp.c  sc_cmov.c  sc_neg.c  sign_modified.c  uopen_modified.c  usign_modified.c  utility.c  utility.h  uxeddsa.c  uxeddsa.h  vopen_modified.c  vsign_modified.c  vxeddsa.c  vxeddsa.h  xeddsa.c  xeddsa.h  zeroize.c  zeroize.h
src/curve25519/ed25519/additions/generalized/: ge_p3_add.c  gen_constants.h  gen_crypto_additions.h  gen_eddsa.c  gen_eddsa.h  gen_labelset.c  gen_labelset.h  gen_veddsa.c  gen_veddsa.h  gen_x.c  gen_x.h  point_isreduced.c  sc_isreduced.c
src/curve25519/ed25519/main/: main.c
src/curve25519/ed25519/nacl_sha512/: hash.c
src/curve25519/ed25519/tests/: internal_fast_tests.c  internal_fast_tests.h  internal_slow_tests.c  internal_slow_tests.h  tests.c  tests.h
src/protobuf-c/: CMakeLists.txt  protobuf-c.c
tests/: CMakeLists.txt  fuzz_target.c  test_common.c  test_common.h  test_common_ccrypto.c  test_common_openssl.c  test_curve25519.c  test_device_consistency.c  test_fingerprint.c  test_group_cipher.c  test_hkdf.c  test_key_helper.c  test_protocol.c  test_ratchet.c  test_sender_key_record.c  test_session_builder.c  test_session_cipher.c  test_session_record.c  test_simultaneous_initiate.c  test_utarray.h
